--- a/src/app/components/governance/governance.component.scss
+++ b/src/app/components/governance/governance.component.scss
@@ -130,3 +130,15 @@ tr.proposal-detail-row {
   background-color: #0D151F;
   color: white;
 }
+
+.success {
+  color: #4CAF50;
+}
+
+.fail {
+color: #F44336;/*#00796b;*/
+}
+
+.voting {
+  color: #B3E5FC;/*#00796b;*/
+}
