--- a/src/app/components/governance/governance.component.html
+++ b/src/app/components/governance/governance.component.html
@@ -17,8 +17,20 @@
 
     <ng-container matColumnDef="status">
       <th mat-header-cell *matHeaderCellDef class="th-lg"> Status </th>
-      <td mat-cell *matCellDef="let proposal"> 
-        {{proposal.proposal_status}}
+      <td mat-cell *matCellDef="let proposal">
+        <span *ngIf="proposal.proposal_status === 'Passed'">
+            <i class="ion-checkmark-circled success"></i>
+        </span>
+        <span *ngIf="proposal.proposal_status === 'Rejected'">
+            <i class="ion-close-circled fail"></i>
+        </span>
+        <span *ngIf="proposal.proposal_status === 'VotingPeriod'">
+            <i class="ion-minus-circled voting"></i>
+        </span>
+        <!-- <ng-template #elseStatus>
+          <i class="ion-close-circled fail"></i>
+        </ng-template> -->
+        <!-- {{proposal.proposal_status}} -->
       </td>
     </ng-container>
 
