--- a/src/app/components/validators/validators.component.scss
+++ b/src/app/components/validators/validators.component.scss
@@ -223,10 +223,10 @@ mat-table {
   height: 20px !important;
 }
 
-i {
-  margin-top: 3px;
-  margin-left: 3px;
-}
+// i {
+//   margin-top: 3px;
+//   margin-left: 3px;
+// }
 
 .dropdown-toggle {
   color: white;
