--- a/src/app/components/governance/governance.component.html
+++ b/src/app/components/governance/governance.component.html
@@ -2,21 +2,21 @@
   <table mat-table multiTemplateDataRows [dataSource]="dataSource" class="mat-elevation-z8 w-auto">
     
     <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef> ID </th>
+      <th mat-header-cell *matHeaderCellDef><i class="ion-android-funnel"></i></th>
       <td mat-cell *matCellDef="let proposal">
         {{proposal.proposal_id}}
       </td>
     </ng-container>
   
     <ng-container matColumnDef="title" sticky>
-      <th mat-header-cell *matHeaderCellDef class="th-lg"> Title </th>
-      <td mat-cell *matCellDef="let proposal">
+      <th mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-code"></i>Title</th>
+      <td mat-cell *matCellDef="let proposal" mdbTooltip="{{proposal.proposal_content.value.title}}" placement="top">
         {{proposal.proposal_content.value.title | slice:0:20}}...
       </td>
     </ng-container>
 
     <ng-container matColumnDef="status">
-      <th mat-header-cell *matHeaderCellDef class="th-lg"> Status </th>
+      <th mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-android-checkbox-outline"></i>Status</th>
       <td mat-cell *matCellDef="let proposal">
         <span *ngIf="proposal.proposal_status === 'Passed'">
             <i class="ion-checkmark-circled success"></i>
@@ -35,7 +35,7 @@
     </ng-container>
 
     <ng-container matColumnDef="submitted">
-      <th mat-header-cell *matHeaderCellDef class="th-lg"> Submitted </th>
+      <th mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-paper-airplane"></i>Submitted</th>
       <td mat-cell *matCellDef="let proposal">  
         {{proposal.submit_time | date:"h:mm a, MMM d, y"}}
       </td>
@@ -49,14 +49,14 @@
     </ng-container> -->
 
     <ng-container matColumnDef="deposit">
-      <th mat-header-cell *matHeaderCellDef class="th-lg"> Deposit </th>
+      <th mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-archive"></i>Deposit</th>
       <td mat-cell *matCellDef="let proposal">  
         {{proposal.total_deposit[0].amount/1e6 | number:".2-2"}} <span class="ticker">ATOM</span>
       </td>
     </ng-container>
 
     <ng-container matColumnDef="depositEnd">
-        <th mat-header-cell *matHeaderCellDef class="th-lg"> Deposit End </th>
+        <th mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-load-c"></i>Deposit End</th>
         <td mat-cell *matCellDef="let proposal">  
           {{proposal.deposit_end_time | date:"h:mm a, MMM d, y"}}
         </td>
@@ -80,8 +80,9 @@
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let proposal; columns: displayedColumns;"
+        [appBgHighlight]="'#383D4C'" defaultColor="#111923"
         [class.example-expanded-row]="expandedElement === proposal"
-        (click)="expandedElement = expandedElement === proposal ? null : proposal" mdbTooltip="Click to see more" placement="top">
+        (click)="expandedElement = expandedElement === proposal ? null : proposal">
     </tr>
     <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="proposal-detail-row"></tr>
   </table>
