--- a/src/app/components/validators/validators.component.html
+++ b/src/app/components/validators/validators.component.html
@@ -55,7 +55,7 @@
       </ng-container>
   
       <ng-container  matColumnDef="moniker" sticky>
-        <th mat-sort-header="description.moniker" mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-person"></i>Name</th>
+        <th mat-sort-header="description.moniker" mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-at"></i>Name</th>
         <td mat-cell *matCellDef="let validator" id="{{validator.hex_address}}"> 
           <span>
             <!-- <figure style="cursor: pointer;" (click)="openDialog(validator)" class="validator-avatar is-128x128" *ngIf="validator.keybase">
@@ -263,7 +263,7 @@
       <tr mat-row *matRowDef="let validator; columns: displayedColumns;"
           [appBgHighlight]="'#383D4C'" defaultColor="#111923"
           [class.example-expanded-row]="expandedElement === validator"
-          (click)="expandedElement = expandedElement === validator ? null : validator" mdbTooltip="Click to see more" placement="top">
+          (click)="expandedElement = expandedElement === validator ? null : validator">
       </tr>
       <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="validator-detail-row"></tr>
     </table>
