redesigned gov detail page

--- a/src/app/components/governance/governance.component.html
+++ b/src/app/components/governance/governance.component.html
@@ -1,4 +1,4 @@
-<app-test></app-test>
+<!-- <app-test></app-test> -->
 <div class="row scrollbar-primary table-responsive text-nowrap">
   <table mat-table multiTemplateDataRows [dataSource]="dataSource" class="mat-elevation-z8 w-auto">
     
