--- a/src/app/components/governance/governance.component.html
+++ b/src/app/components/governance/governance.component.html
@@ -1,4 +1,5 @@
-<!-- <app-test></app-test> -->
+<app-test></app-test>
+<app-chart-cards-gov></app-chart-cards-gov>
 <div class="row scrollbar-primary table-responsive text-nowrap">
   <table mat-table multiTemplateDataRows [dataSource]="dataSource" class="mat-elevation-z8 w-auto">
     
