--- a/src/app/components/validators/validators.component.html
+++ b/src/app/components/validators/validators.component.html
@@ -1,3 +1,4 @@
+<app-chart-cards></app-chart-cards>
  <!-- progress bar with label -->
 <!-- <div>
   <mdb-progress *ngFor="let block of (appState | async).blocks.slice(0,1); let validator" value="{{
@@ -10,7 +11,6 @@
     : 0
   }}%</mdb-progress>
 </div> -->
-
 <div class="row" *ngIf="(appState | async).validators.serviceLoaded; else elseBlock">
   <!-- @aakatev	
     https://github.com/cosmos/cosmos-sdk/blob/9a16e2675f392b083dd1074ff92ff1f9fbda750d/types/staking.go
